Add no-spoiler option

--- a/utb.yaml
+++ b/utb.yaml
@@ -2,4 +2,5 @@ problem-dir: .open
 solution-dir: volumes
 force-cpp-on-ansi-c: true
 bypass-ssl-certificate: true
+no-spoiler: true
 editor: gvim -o {}
